# ransomwatch

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  ransomwatch.py  requirements.txt
.github/workflows/: release-docker.yml  release-pypi.yml
ransomwatch/: __init__.py  __main__.py  api.py  cli.py  config.py  logic.py  utils.py
